# starfinder

./: .gitignore  9dof_imu_calibration.py  README.md  main.py  pyproject.toml
extra/: starfinder.service
starfinder/: bodies.py  camera.py  fps.py  gfx.py  gps.py  grid.py  heading.py  icm20948.py  imu.py  main.py  stars.py  zoom_button.py
